typescript/checker/tests/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithES3.ts.stderr
error: jsc.taraget should be es5 or upper to use getter / setter
 --> $DIR/tests/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithES3.ts:6:9
  |
6 |     get x() {
  |         ^

error: jsc.taraget should be es5 or upper to use getter / setter
  --> $DIR/tests/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithES3.ts:12:9
   |
12 |     set x(v) {
   |         ^

error: jsc.taraget should be es5 or upper to use getter / setter
  --> $DIR/tests/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithES3.ts:17:9
   |
17 |     get a() { return 1 }
   |         ^

error: jsc.taraget should be es5 or upper to use getter / setter
  --> $DIR/tests/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithES3.ts:21:9
   |
21 |     set b(v) { }
   |         ^

